# wisp

./: .clang-format  .gitignore  CLEANUP-README.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  ChangeLog  NATIVE_GRADIENTS_PLAN.md  README.md  app.css  cleanup-git-history.sh  color_math.py  color_math_test  color_math_test.c  flex_calc_test.html  invalid_files.txt  out.txt  test_bin  update_resources.py
appimage/: AppRun-gtk  (+4 more)
contrib/: CMakeLists.txt
contrib/libcss/: CMakeLists.txt  properties.toml
contrib/libcss/build-aux/: cmake_helpers.py  generate_cascade.py  property_generator.py
contrib/libcss/building/: makefixed.py  makeopv.py
contrib/libcss/docs/: GRID_IMPLEMENTATION_REVIEW.md  SELECTOR_IMPROVEMENTS.md  TODO_UNIFY_UNITS.md
contrib/libcss/include/libcss/: computed.h  fpmath.h  gradient.h  properties.h  select.h  types.h  unit.h
contrib/libcss/src/: stylesheet.c  stylesheet.h
contrib/libcss/src/bytecode/: bytecode.h  opcodes.h  opcodes_manual.h
contrib/libcss/src/lex/: lex.c  lex.h
contrib/libcss/src/parse/: important.c  language.c  parse.c  propstrings.c  propstrings.h
contrib/libcss/src/select/: arena.c  assets.py  autogenerated_computed.h  autogenerated_destroy.inc  autogenerated_propget.h  autogenerated_propset.h  computed.c  computed.h  computed_manual.c  custom_properties.c  custom_properties.h  dispatch.c  font_face.c  hash.c  helpers.h  overrides.py  select.c  select.h  select_config.py  select_generator.py  strings.c  strings.h  unit.c  variables.c  variables.h
contrib/libcss/src/utils/: utils.h
contrib/libcss/test/: INDEX  calc_props.c  csdetect.c  dump.h  dump_computed.h  lex-auto.c  parse-auto.c  testutils.h  var-context.c  var-resolve.c
contrib/libdom/: CMakeLists.txt
contrib/libdom/bindings/hubbub/: CMakeLists.txt  parser.c  parser.h
contrib/libdom/building/: transform.py
contrib/libdom/examples/files/: test.html
contrib/libhubbub/: CMakeLists.txt
contrib/libhubbub/docs/: Todo
contrib/libnsbmp/: CMakeLists.txt  README.md
contrib/libnsgif/: CMakeLists.txt
contrib/libnsutils/: CMakeLists.txt
contrib/libnsutils/src/: time.c
contrib/libparserutils/: CMakeLists.txt
contrib/libparserutils/building/: Aliases  Doxyfile  conv.py  make-aliases.py
contrib/libsvgtiny/: CMakeLists.txt  README.md
contrib/libsvgtiny/include/: svgtiny.h
contrib/libsvgtiny/src/: colors.gperf  svgtiny.c  svgtiny_gradient.c  svgtiny_internal.h  svgtiny_parse.c  svgtiny_parse.h  svgtiny_path.c  svgtiny_strings.h
contrib/libsvgtiny/test/: Makefile  afl-svg.dict  runtest.sh  svg2mvg.c  svgparse.c
contrib/nsgenbind/: CMakeLists.txt
contrib/nsgenbind/src/: duk-libdom-generated.c  duk-libdom-interface.c  duk-libdom.c  ir.c  ir.h  nsgenbind-ast.c  nsgenbind-ast.h  nsgenbind-lexer.l  nsgenbind-parser.y  nsgenbind.c  utils.c  webidl-ast.c  webidl-ast.h  webidl-parser.y
contrib/quickjs-ng/: CMakeLists.txt  api-test.c  builtin-array-fromasync.h  cutils.c  cutils.h  dtoa.c  dtoa.h  fuzz.c  libregexp.c  libregexp.h  libunicode-table.h  libunicode.c  libunicode.h  list.h  qjs.c  qjsc.c  quickjs-c-atomics.h  quickjs-libc.c  quickjs-libc.h  quickjs-opcode.h  quickjs.c  quickjs.h  run-test262.c  unicode_gen.c  unicode_gen_def.h
contrib/quickjs-ng/examples/: fib.c  point.c
frontends/: CMakeLists.txt
frontends/beos/: Makefile  Makefile.defaults  about.cpp  beos_res.rsrc  bitmap.cpp  cookies.cpp  download.cpp  fetch_rsrc.cpp  fetch_rsrc.h  filetype.cpp  font.cpp  font.h  gui.cpp  gui_options.h  login.cpp  options.h  plotters.cpp  plotters.h  res.rdef  scaffolding.cpp  scaffolding.h  schedule.cpp  schedule.h  throbber.cpp  window.cpp  window.h
frontends/beos/res/: license
frontends/gtk/: CMakeLists.txt  about.c  about.h  accelerator.c  bitmap.c  compat.h  completion.c  completion.h  cookies.c  corewindow.c  corewindow.h  download.c  fetch.c  fetch.h  gdk.c  gdk.h  global_history.c  gui.c  hotlist.c  layout_pango.c  layout_pango.h  local_history.c  menu.c  menu.h  misc.c  misc.h  options.h  page_info.c  page_info.h  plotters.c  plotters.h  preferences.c  preferences.h  print.c  print.h  resources.c  resources.h  scaffolding.c  scaffolding.h  schedule.c  (+17 more)
frontends/gtk/res/: cookies.ui  downloads.ui  globalhistory.ui  hotlist.ui  localhistory.ui  messages.gresource.xml  neosurf.gresource.xml  ui.gresource.xml  warning.ui  wisp-16x16.xpm  wisp-gtk.desktop  wisp.gresource.xml  wisp.xpm
frontends/monkey/: CMakeLists.txt  Makefile  Makefile.defaults  bitmap.c  browser.c  browser.h  dispatch.c  dispatch.h  download.c  fetch.c  filetype.c  layout.c  main.c  options.h  plot.c  schedule.c  schedule.h
frontends/qt/: CMakeLists.txt  Makefile  Makefile.defaults  actions.cls.h  actions.cpp  application.cls.h  application.cpp  bitmap.cpp  bitmap.h  bookmarks.cls.h  corewindow.cls.h  corewindow.cpp  corewindow.h  fetch.cpp  fetch.h  global_history.cls.h  keymap.cpp  layout.cpp  layout.h  listselection.cls.h  local_history.cls.h  local_history.cpp  main.cpp  misc.cpp  misc.h  options.h  page_info.cls.h  plotters.cpp  plotters.h  resources.h  scaffolding.cls.h  scaffolding.cpp  scaffoldstyle.cls.h  settings.cls.h  statussplitter.cls.h  urlbar.cls.h  urlbar.cpp  widget.cls.h  widget.cpp  window.cls.h  (+2 more)
frontends/qt/res/: netsurf.qrc  wisp.qrc
frontends/visurf/: CMakeLists.txt  bitmap.c  bitmap.h  commands.c  commands.h  fetch.c  fetch.h  getopt.h  keybindings.c  keybindings.h  layout.c  layout.h  main.c  options.h  plotters.c  plotters.h  settings.h  undo.h  visurf.h  window.c  window.h
frontends/windows/: CMakeLists.txt  Makefile  Makefile.defaults  Makefile.tools  about.c  about.h  bitmap.c  bitmap.h  clipboard.c  clipboard.h  cookies.c  cookies.h  corewindow.c  corewindow.h  download.c  download.h  drawable.c  drawable.h  fetch.c  fetch.h  file.c  file.h  findfile.c  findfile.h  font.c  font.h  global_history.c  global_history.h  gui.c  gui.h  hotlist.c  hotlist.h  local_history.c  local_history.h  main.c  options.h  plot.c  plot.h  pointers.c  pointers.h  (+8 more)
frontends/windows/res/: installer.nsi  neosurf.manifest  resource.rc  wisp.manifest
(+623 files in other folders)
